--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,12 +1,13 @@
 version: 2
-registries:
-  maven-google:
-    type: maven-repository
-    url: https://dl.google.com/dl/android/maven2/
+  # registries:
+  # maven-google:
+  #   type: maven-repository
+  #   url: https://dl.google.com/dl/android/maven2/
 updates:
-- package-ecosystem: "gradle"
-  directory: "/AndroidDependabotSample"
-  registries:
-    - maven-google
-  schedule:
-    interval: "weekly"
+  - package-ecosystem: "gradle"
+    directory: "/AndroidDependabotSample"
+    # registries:
+    #   - maven-google
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 30
